fixed gap image

--- a/join_page.css
+++ b/join_page.css
@@ -31,6 +31,9 @@
 }
 
 .join-flow-container {
+  display: flex;
+  padding-bottom: 100px;
+  gap: 100px;
   width: 100%;
   flex-direction: column;
   align-items: center;
